# jinniuai_wealth_safe_world

./: .gitignore  LICENSE  Makefile  README.md  candlestick.py  hello_world.py  mkdocs.yml  pyproject.toml  streamlit_app.py
conf/: settings.toml
docs/: .pages  CNAME  TODO.md  changelog.md  glossary.md  index.md
docs/ideas/: .pages
docs/plans/: .pages
docs/plans/躺赢8/: target.md
docs/robots/: .pages
docs/robots/价值投资一号/: framework.md
docs/robots/成长价值投资一号/: framework.md
docs/基础知识/: GICS.md  什么是CAGR.md  房地产行业财务分析.md
docs/基础知识/images/: p20180711170915937.png!wm  p20180711170946517.png!wm  p20180711170953717.png!wm  p20180711171003990.png!wm  p20180711171033546.png!wm  p20180711171048474.png!wm  p20180711171127859.png!wm
docs/基础知识/财务分析及估值/: FCFF估值.md  审计是什么.md  财务造假就是这么一回事.md
docs/投资教程/: 不同的性格采用不同的方法.md  如何选择成长股.md
docs/投资教程/基础知识/: ROIC指标详解.md  储蓄率与股市.md  关于可转债.md  基民是如何把钱亏掉的.md  存货.md  房地产存货的成本计算.md  港股IPO.md  谈谈换手率的临界值与市场的关系.md
docs/投资框架/: 投资能力地图.md
docs/投资框架/名人研究/: 冯柳.md
docs/投资框架/成长价值投资一号/: .pages  framework.md  个股检查清单.md  个股研究框架.md
docs/投资笔记/个股研究/: 上海机场.md  亿嘉和.md  健帆生物.md  利安隆.md  华住酒店.md  国光股份.md  宁德时代.md  广联达.md  成都银行.md  新坐标.md  欧普康视.md  永辉超市.md  石药集团.md  碧桂园服务.md  福斯特.md  美亚光电.md  花园生物.md  蓝晓科技.md  邮储银行.md  金石资源.md
docs/投资笔记/宏观研究/: 港币与香港市场.md
docs/投资笔记/投资想法/: 低估的银行股的机会.md  关于期权的使用.md  好的投资方法的定义.md  (+1 more)
docs/指标详解/: .pages
investment_log/: hello_world.py  streamlit_app.py
investment_log/ideas/: idea_log.py  target_finding.py
investment_log/plans/: target.py
investment_log/snbpy/: test.py
investment_log/terms/: define.yaml
(+230 files in other folders)
