[tool.poetry]
name = "jinniuai_wealth_safe_world"
version = "1.4.4"
description = "金牛智道一号的财富安全世界"
authors = ["markqiu <qiucheng@jinniuai.com>"]
license = "MIT"

[[tool.poetry.source]]
name = 'aliyun'
url = 'https://mirrors.aliyun.com/pypi/simple/'
default = true

[tool.poetry.dependencies]
python = "^3.8"
streamlit-echarts = "^0.1.0"
jiagu = "^0.2.3"
TA-Lib = "^0.4.19"
jieba = "^0.42.1"
panel = "^0.10.1"
dash = "^1.17.0"
mkdocs-macros-plugin = "^0.4.20"
pymysql = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-asyncio = "^0.14.0"
aiomonitor = "^0.4.5"
mkdocs = "^1.1"
mkdocs-material = "^6.0"
mkdocs-minify-plugin = "^0.3.0"
mkdocs-git-revision-date-localized-plugin = "^0.7.2"
mkdocs-awesome-pages-plugin = "^2.2.1"
pytest-mock = "^3.3.1"
pre-commit = "^2.7.1"

[tool.black]
line-length = 160
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = [
    "tests",
    "integration",
]
log_cli=true
log_level="NOTSET"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
